ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana
  namespace: logging
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  ingressClassName: nginx
  rules:
  - host: grafana.cloud.of.by
    http:
      paths:
        - pathType: Prefix
          backend:
            service:
              name: loki-grafana
              port:
                number: 80
          path: /
  #tls:
  #  - hosts:
  #    - sd-k8s4-grafana.patio-minsk.by
  #    secretName: patio-minsk
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: alertmanager
  namespace: logging
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  ingressClassName: nginx
  rules:
  - host: alertmanager.cloud.of.by
    http:
      paths:
        - pathType: Prefix
          backend:
            service:
              name: loki-alertmanager
              port:
                number: 9093
          path: /
  #tls:
  #  - hosts:
  #    - sd-k8s4-alertmanager.patio-minsk.by
  #    secretName: patio-minsk
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus
  namespace: logging
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  ingressClassName: nginx
  rules:
  - host: prometheus.cloud.of.by
    http:
      paths:
        - pathType: Prefix
          backend:
            service:
              name: loki-prometheus-server
              port:
                number: 80
          path: /
  #tls:
  #  - hosts:
  #    - sd-k8s4-prometheus.patio-minsk.by
  #    secretName: patio-minsk
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nextcloud2
  namespace: nextcloud
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  ingressClassName: nginx
  rules:
  - host: next.cloud.of.by
    http:
      paths:
        - pathType: Prefix
          backend:
            service:
              name: nextcloud
              port:
                number: 8080
          path: /
  #tls:
  #  - hosts:
  #    - sd-k8s4-grafana.patio-minsk.by
  #    secretName: patio-minsk
